<resources>
    <string name="app_name">SWYPAM</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_rationale_phone">"To uniquely identify your phone, Swypeam will need permission to read your phone's ID"
    </string>
    <string name="permission_rationale_storage">"Swypeam will need permission to save new media files"
    </string>
    <string name="permission_rationale_message">"To automatically detect the verification code, allow Swypeam to view SMS messages"
    </string>
    <string name="title_activity_ads">Ads</string>
    <string name="noticephonemessage">"Swypeam will require your permission to read your device number for identification. Please grant this access when asked, you can change it later."</string>
    <string name="noticeSMSmessage">"To easily verify your number, Swypeam can automatically detect your verification code if you allow Swypeam to view SMS messages."</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_general__pref">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="preference_text">Control the ads that are shown to you by selecting areas of interest to you.<b>General ads will be directed to you if no preference is selected.</b></string>
    <string name="health_text">Health</string>
    <string name="sports_text">Sports</string>
    <string name="cuisine_text">Cuisine</string>
    <string name="entertainment_text">Entertainment</string>
    <string name="religion_text">Religion</string>
    <string name="technology_text">Technology</string>
    <string name="fashion_text">Fashion</string>
    <string name="property_text">Property</string>
    <string name="business_finance_text"><![CDATA[Business & Finance]]></string>
</resources>
